gcplot/deploy/gcplot-deploy.yaml
# Copyright 2017 ApplicationPower.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Configuration to deploy release version of the springboot application compatible with
# Kubernetes 1.8.
#
# Example usage: kubectl create -f <this_file>
# --------------------------- Service ---------------------- #
apiVersion: v1
kind: Service
metadata:
 name: gcplot-svc
 namespace: default
spec:
 #type: NodePort
 ports:
 - port: 8080
   targetPort: 80
   #nodePort: 30011
 selector:
  app: gcplot
  tier: backend
---
# --------------------------- Deployment ------------------- #
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gcplot-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: gcplot
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: gcplot
        tier: backend
    spec:
      containers:
        - name: gcplot
          image: registry.cn-shanghai.aliyuncs.com/shalousun/gcplot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: harbor-key
---
# --------------------------- ingress ---------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcplot-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: gcplot-svc
          servicePort: 8080
---
